radarr/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8989
      name: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radarr
spec:
  podSelector:
    matchLabels:
      app: radarr
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mediaretriever
        - podSelector:
            matchLabels:
              app: radarr-proxy
      ports:
        - protocol: TCP
          port: 7878
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mediaretriever
        - podSelector:
            matchLabels:
              app: qbittorrent
      ports:
        - protocol: TCP
          port: 8080
